Remove ThisWorkbook.cls from commit closes #3

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # exclude backup directories
 **/Dev Backup/
 
-# exclude version backup directories (including current versions) 
+# exclude version backup directories (including current versions)
 **/Version*/
 
 # exclude superceded development directory
@@ -47,3 +47,5 @@ $RECYCLE.BIN/
 # exclude Mac file
 .DS_Store
 
+# excluse ThisWorkbook class module
+**/*.VBA/ThisWorkbook.cls
